--- a/recetas/index.html
+++ b/recetas/index.html
@@ -13,31 +13,27 @@
 <H2>Colombia</H2>
 <P>
 	<UL>
-		<LI type="circle"><A ID="enlace1" HREF="../Colombia/ajiaco.html">Ajiaco</A><BR></LI>
+		<LI type="circle"><A ID="enlace1" HREF="./Colombia/ajiaco.html">Ajiaco</A><BR></LI>
 	</UL>
 	<UL>
-		<LI type="circle"><A ID="enlace4" HREF="../Colombia/arroz_coco.html">arroz coco</A><BR></LI>
+		<LI type="circle"><A ID="enlace4" HREF="./Colombia/arroz_coco.html">arroz coco</A><BR></LI>
 	</UL>
 	<UL>
-		<LI type="circle"><A ID="enlace5" HREF="../Colombia/bandeja_paisa.html">Bandeja Paisa</A><BR></LI>
+		<LI type="circle"><A ID="enlace5" HREF="./Colombia/bandeja_paisa.html">Bandeja Paisa</A><BR></LI>
 	</UL>
 </P>
-<H2>México</H2>
+<H2>Mexico</H2>
 <P>
 	<UL>
-		<LI type="circle"><A ID="enlace2" HREF="../Mexico/pozole.html">Pozole</A><BR></LI>
+		<LI type="circle"><A ID="enlace2" HREF="./Mexico/pozole.html">Pozole</A><BR></LI>
 	</UL>
 </P>
-<<<<<<< HEAD
 <H2>Brasil</H2>
 <P>
 	<UL>
-		<LI type="circle"><A ID="enlace3" HREF="../Brasil/arrolladito.html">Arrolladito</A><BR></LI>
+		<LI type="circle"><A ID="enlace3" HREF="./Brasil/arrolladito.html">Arrolladito</A><BR></LI>
 	</UL>
 </P>
 
-=======
-
->>>>>>> origin/Colombia
 </BODY>
 </HTML>
